# Gyro

./: .editorconfig  .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish-homebrew.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  MenuBarPopover.tsx  main.tsx  menu-bar-model-provider.ts  menu-bar-state.ts  menu-bar.css  monaco-editor.ts  monaco-languages.d.ts  provider-stream-events.ts  theme.css  update-controller.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu_bar.rs
crates/gyro-cli/: Cargo.toml
crates/gyro-cli/src/: codex_app_server.rs  main.rs
crates/gyro-cli/tests/: exit_codes.rs
crates/gyro-core/: Cargo.toml
crates/gyro-core/src/: account.rs  automations.rs  capabilities.rs  config.rs  diff.rs  doctor.rs  execution.rs  harness.rs  ipc.rs  keychain.rs  kimi_acp.rs  lib.rs  mutations.rs  paths.rs  policy.rs  provider_health.rs  provider_registry.rs  provider_stream.rs  security.rs  sessions.rs  worktrees.rs
docs/: ai-development.md  architecture.md  homebrew.md  install-macos.md  launch.md  privacy.md  product-entry-and-workbench-plan.md  product-readiness-audit.md  release.md  vision.md
docs/media/launch/: README.md
docs/releases/: v0.1.0-alpha.23.1.md  v0.1.0-alpha.23.2.md  v0.1.0-alpha.23.3.md  v0.1.0-alpha.23.md  v0.1.0-alpha.24.md  v0.1.0-alpha.25.1.md  v0.1.0-alpha.25.md  v0.1.0-alpha.26.1.md  v0.1.0-alpha.26.2.md  v0.1.0-alpha.26.3.md  v0.1.0-alpha.26.4.md  v0.1.0-alpha.26.md  v0.1.0-alpha.27.md  v0.1.0-alpha.28.1.md  v0.1.0-alpha.28.2.md  v0.1.0-alpha.28.3.md  v0.1.0-alpha.28.4.md  v0.1.0-alpha.28.md  v0.1.0-alpha.29.1.md  v0.1.0-alpha.29.2.md  v0.1.0-alpha.29.md
docs/screenshots/site-v2/: README.md
docs/screenshots/site-v3/: README.md
docs/screenshots/v0.2-reliability-design/: README.md
packaging/homebrew/Casks/: gyro.rb
packaging/homebrew/Formula/: gyro.rb
scripts/: build-download-site.mjs  check-cli-release-packaging.mjs  check-composer-context-usage.mjs  check-dev-env.mjs  check-download-site.mjs  check-menu-bar-state.mjs  check-provider-stream-ordering.mjs  check-release-config.mjs  check-workbench-ui.mjs  configure-release-updater.mjs  create-updater-manifest.mjs  finalize-cli-release.mjs  install-local-app.mjs  package-cli-release.mjs  render-launch-teaser.sh  verify-macos-release.mjs
site/: _headers  app.js  changelog.js  index.html  release-utils.js  robots.txt  sitemap.xml  styles.css
site/assets/: ATTRIBUTIONS.md
site/changelog/: index.html
site/fixtures/: latest-release.json
site/install/: index.html
site/privacy/: index.html
