[workspace]
members = [
  "crates/gyro-core",
  "crates/gyro-cli",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
authors = ["Gyro contributors"]
edition = "2021"
homepage = "https://github.com/gyro-dev/gyro"
license = "Apache-2.0"
repository = "https://github.com/gyro-dev/gyro"
rust-version = "1.78"
version = "0.1.0-alpha.9"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
keyring = { version = "3.6", features = ["apple-native"] }
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.12", features = ["json"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
