[package]
name = "gyro-cli"
description = "Command-line interface for Gyro."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "gyro"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
ctrlc.workspace = true
diffy.workspace = true
gyro-core = { path = "../gyro-core" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
portable-pty = "0.9"
tempfile = "3.10"
