[package]
name = "gyro-core"
description = "Shared local-first engine for Gyro sessions, tools, config, and app IPC."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
keyring.workspace = true
rand.workspace = true
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.10"
