[package]
name = "gyro-desktop"
description = "Gyro macOS desktop application."
build = "build.rs"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gyro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gyro-core = { path = "../../../crates/gyro-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
portable-pty = "0.8"
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-opener = "2.2"
tauri-plugin-updater = "2.8"
uuid.workspace = true
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
