[package]
name = "gyro-desktop"
description = "Gyro macOS desktop application."
build = "build.rs"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gyro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
gyro-core = { path = "../../../crates/gyro-core" }
libc.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
portable-pty = "0.9"
tauri = { version = "2.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-notification = "2.3"
tauri-plugin-opener = "2.2"
tauri-plugin-updater = "2.8"
uuid.workspace = true
ureq.workspace = true
url.workspace = true
walkdir = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSBitmapImageRep", "NSImage", "NSImageRep"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary", "NSError"] }
objc2-web-kit = { version = "0.3", features = ["WKSnapshotConfiguration", "WKWebView", "block2"] }

[dev-dependencies]
tempfile = "3.10"
